--- a/lib/jquery-ui/partials/_jquery-ui-datepicker.scss
+++ b/lib/jquery-ui/partials/_jquery-ui-datepicker.scss
@@ -22,7 +22,7 @@
     height: 1.8em;
   }
   .ui-datepicker-prev-hover, .ui-datepicker-next-hover {
-    @extend: ui-datepicker-prev;
+    @extend ui-datepicker-prev;
     top:1px;
   }
   .ui-datepicker-prev { 
